--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="permission_rationale">"Contacts permissions are needed for providing email
         completions."
     </string>
+
+    <!-- Strings related to wireless communication -->
+    <string name="BT_Comm">Bluetooth Communication</string>
+    <string name="WiFi_Comm">WiFi Communication</string>
+    <string name="SMS_Comm">SMS Communication</string>
+
 </resources>
